--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,7 +15,7 @@
   
   
   <div
-  class="w-48 sm:w-64 h-25 flex items-center absolute bottom-0 right-0"
+  class="w-48 sm:w-64 h-25 flex items-center absolute bottom-0 right-0 z-10"
   >
     <div class="flex flex-row space-x-10 mb-6 mt-6 sm:mt-10 sm:mb-10 h-8 sm:h-12">
       <a href="https://twitter.com/drinklyofficial" rel="noopener" target="_blank">
