--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -11,7 +11,7 @@
             d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />
         </svg> 
     </label>
-    <div [ngStyle]="{'left.rem': !sidebar_left? '-16' : '0'}" class="sidebar overflow-y-scroll sm:overflow-y-auto">
+    <div [ngStyle]="{'left.rem': !sidebar_left? '-16' : '0'}" class="z-10 sidebar overflow-y-scroll sm:overflow-y-auto">
         <header class="text-4xl text-white h-16"></header>
 
         <ul>
