--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -3,24 +3,29 @@
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
   <div class="flex bg-black">
-    <a href="/bars"><img src="assets/images/Drinkly-2.png" alt="logo_drinkly"
-        class="object-scale-down h-16 mx-auto ml-8" /></a>
+    <div class="ml-20 my-1">
+      <a href="/"
+        ><img
+          src="assets/images/Drinkly-2.png"
+          alt="logo_drinkly"
+          class="object-scale-down h-16 transition duration-500 ease-in-out transform  hover:scale-110"
+      /></a>  
+      </div>
   </div>
             <div
               style="background-image: url('assets/images/404bg.jpg');"
-              class="my-6 pt-24 pb-64 mt-48 bg-cover bg-blue-700 m-auto max-w-5xl self-center flex items-center rounded-lg shadow"
+              class="my-6 pt-24 pb-64 mt-32 bg-cover bg-blue-700 m-auto max-w-5xl self-center flex items-center rounded-lg shadow"
             >
               <div
-                class="p-10 ml-20 shadow-2xl rounded-lg items-center"
-                style="background-color: white;"
+                class="p-10 ml-20 rounded-lg items-center"
               >
-                <h1 class="font-serif subpixel-antialiased text-xl text-black">
+                <h1 class="font-serif subpixel-antialiased text-xl text-transparent">
                   <h1 class="text-4xl">Error 404:</h1>
                   Ups! Parece que esta ruta no existe...
                 </h1>
                 <button
                   [routerLink]="'/home'"
-                  class="ml-20 mt-5 font-serif subpixel-antialiased text-xl bg-orange-500 hover:bg-orange-600 text-black px-2 rounded-md"
+                  class="ml-48 mt-40 bg-orange-500 hover:bg-orange-700 text-white font-normal py-2 px-4 rounded"
                 >
                   Volver al inicio
                 </button>
