--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -320,7 +320,7 @@
             <div class="h-full w-full bg-black py-8">
                 <div class="flex justify-center">
                 </div>
-                <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-4xl md:text-5xl text-white font-semibold">
+                <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-6xl md:text-6xl text-white font-light">
                   PREPÁRALO TÚ MISMO
                   <div class="flex items-center justify-center px-2 sm:px-8 md:px-8">
                     <a href="/drinks" class="hover:no-underline">
@@ -401,7 +401,7 @@
 
             <!-- ADS -->
             <div class="py-8">
-              <div class="px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-4xl md:text-5xl font-semibold">DISFRUTA POR MENOS</div>
+              <div class="px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-6xl md:text-6xl text-black font-light">DISFRUTA POR MENOS</div>
               <!-- ADS CARDS -->
               <div class="w-full flex flex-col items-center mt-10 px-12 sm:px-64 md:px-64">
                 <div class="ad_card">
@@ -455,7 +455,7 @@
             <div class="bg-black py-8">
                 <div class="flex justify-center">
                 </div>
-                <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl text-white sm:text-4xl md:text-5xl font-semibold">
+                <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl text-white sm:text-6xl md:text-6xl text-white font-light">
                   DISFRUTA DE CARACAS
                   <div class="flex items-center justify-center px-2 sm:px-8 md:px-8">
                     <a href="/bars" class="hover:no-underline">
