--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
   <div>
     <div 
-   class="h-25 flex items-center absolute bottom-0 z-10 pr-8 pl-4 sm:pl-8 md:pl-16 pb-4 sm:pb-0 md:pb-0 lg:pb-0">
+   class="h-25 flex items-center absolute bottom-0 z-10 pr-8 pl-4 sm:pl-8 md:pl-16 pb-0">
     <div class=" bottom-0 flex-initial">
       <img src="assets/images/Drinkly-1.png" alt="drinkly" class="h-20 sm:h-32 md:h-32 w-auto"/>
     </div>
@@ -16,7 +16,7 @@
   
   
   <div
-  class="z-10 w-48 sm:w-64 h-25 flex items-center absolute bottom-0 right-0 pb-4 sm:pb-0 md:pb-0 lg:pb-0 pr-4 sm:pr-8 md:pr-8"
+  class="z-10 w-48 sm:w-64 h-25 flex items-center absolute bottom-0 right-0 pb-0 pr-4 sm:pr-8 md:pr-8"
   >
     <div class="flex flex-row space-x-10 mb-6 mt-6 sm:mt-10 sm:mb-10 h-8 sm:h-12">
       <a href="https://twitter.com/drinklyofficial" rel="noopener" target="_blank">
